Bug 732693 - Fix bytecode emitted for o.__proto__(). r=bhackett